# bookrobot

./: .gitignore  README.md  bookcube.stl  devrun.sh  shelf.dae  조립.stl
bookrobot_bringup/: CMakeLists.txt  package.xml
bookrobot_bringup/launch/: bringup_robot_gazebo.launch.py
bookrobot_description/: CMakeLists.txt  package.xml
bookrobot_description/launch/: upload_robot.launch.py
bookrobot_description/meshes/collision/: base_link_new.stl  bookcube_new.stl  shelf_new.stl
bookrobot_description/meshes/visual/: main_wheel.dae  sick_tim5_lidar.dae
bookrobot_description/urdf/: former.urdf.xacro  frame.urdf.xacro  robot.urdf.xacro  shelf.urdf.xacro
bookrobot_gazebo/: CMakeLists.txt  package.xml
bookrobot_gazebo/launch/: bringup_gazebo.launch.py
bookrobot_gazebo/models/bookcube/: bookcube.scad  bookcube.stl  generate_stl.py  model.config  model.sdf
bookrobot_gazebo/models/bookshelf/: bookshelf_frame.stl  frame_3level.stl  generate_3level_frame.py  generate_bookshelf.py  model.config  model.sdf
bookrobot_gazebo/models/lib_shelf/: README.md  model.config  model.sdf
bookrobot_gazebo/worlds/: library.sdf
map/: library.world
map/models/aws_robomaker_retail_MagicCube_01/: model.sdf
map/models/aws_robomaker_retail_SecurityCamera_01/: model.sdf
robot/: logfile.txt  model.sdf
robot/meshes/CAD/: base.stl  lift.stl
