<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bookrobot_bringup</name>
  <version>0.0.1</version>
  <description>The bookrobot_bringup package</description>
  <maintainer email="roplming@example.com">roplming</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>bookrobot_description</depend>
  <depend>bookrobot_gazebo</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_gz_bridge</depend>
  <depend>ros_gz_image</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
